# sensorhub

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
clients/python/: ws_client.py
clients/unity/: README.md
clients/unity/Assets/Scripts/: RPLidarVisualizer.cs  SensorHubWebSocketClient.cs
config/: MID360_config.json
scripts/: generate-selfsigned.sh  run_dev.sh
scripts/systemd/: sensorhub.service
src/sensorhub/: logging_config.py  main.py
src/sensorhub.egg-info/: PKG-INFO  SOURCES.txt
src/sensorhub/adapters/arducam/: README.md  arducam_adapter.py
src/sensorhub/adapters/generic_imu/: README.md  imu_adapter.py
src/sensorhub/adapters/livox_mid360/: README.md  livox_adapter.py
src/sensorhub/adapters/livox_mid360/bridge/: CMakeLists.txt  livox_bridge.cpp
src/sensorhub/adapters/livox_mid360/bridge/service/: livox_bridge.service
src/sensorhub/adapters/rplidar_s2/: README.md  rplidar_adapter.py
src/sensorhub/adapters/simulated/: simulated_adapter.py
src/sensorhub/adapters/ublox_gps/: README.md  ublox_adapter.py
src/sensorhub/adapters/uvc_camera/: uvc_camera_adapter.py
src/sensorhub/api/: health.py  metrics.py  routes.py  video.py  video_pipelines.py  ws.py
src/sensorhub/config/: config.example.yaml  config.some.yaml  config.video.yaml  mid360_config.json  mid360_schema.json
src/sensorhub/core/: schemas.py  sensor_base.py  sensor_manager.py  utils.py
src/sensorhub/security/: tls.py
src/sensorhub/video/: pipeline_manager.py
tests/: test_basic.py
